# rust-file-manager

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  GUIDE_cloudflare.md  GUIDE_rust.md  GUIDE_xtask.md  LICENSE  POST_DEPLOY.md  README.md  TAILSCALE.md  VERSION_MANAGEMENT.md  build.rs
deploy/: nginx.example.conf  rust-file-manager.service
src/: admin.rs  auth.rs  categories.rs  config.rs  files.rs  main.rs  users.rs
templates/: index.html  invite_invalid.html  login.html  register.html
xtask/src/: main.rs
