[workspace]
members = ["xtask"]

[package]
name = "rust-file-manager"
version = "1.1.1"
edition = "2021"
description = "Self-hosted file manager: upload, categorize, rename and delete files via a web UI"
license = "MIT"
repository = "https://github.com/kureinmaxim/rust-file-manager"
rust-version = "1.75"
build = "build.rs"

# Release date, kept in sync by `cargo xtask` (see VERSION_MANAGEMENT.md)
[package.metadata.release]
date = "12.06.2026"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "6"
bcrypt = "0.16"
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
